<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TelaPrincipal">

    <LinearLayout
        android:background="@color/netflixBlack"
        android:orientation="horizontal"
        android:id="@+id/containerHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/netflixRed"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSeries"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/series"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFilmes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/filmes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMinhaLista"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/minha_lista"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSair"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="Sair"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFilmes"
        android:layout_width="match_parent"
        android:background="@color/cinzaEscuro"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/containerHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/ContainerProgressBar"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_corner_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

    </View>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ContainerProgressBar"
        app:layout_constraintStart_toStartOf="@+id/ContainerProgressBar"
        app:layout_constraintTop_toTopOf="@+id/ContainerProgressBar" />

    <TextView
        android:id="@+id/textCarregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carregando..."
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ContainerProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/ContainerProgressBar"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@id/ContainerProgressBar" />



</androidx.constraintlayout.widget.ConstraintLayout>